# davomat-tizimi

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
bot/: states.py
bot/handlers/: admin.py  staff.py  start.py
bot/keyboards/: inline.py
core/: config.py
core/db/: __init__.py  base.py  engine.py  models.py
core/security/: access.py
reports/: generator.py
repositories/: attendance.py  class_repo.py  student.py  transfer.py  user.py
scripts/: __init__.py  create_admin.py  migrate_db.py
services/: attendance_service.py  class_service.py  report_service.py  student_service.py  user.py
utils/: dates.py  excel.py  phone.py
